@@ -8,152 +8,185 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 /**
- * Data Transfer Object (DTO) für Filterparameter zur Event-Suche.
- * Wandelt HTTP-Query-Parameter in geeignete Java-Typen um,
- * damit sie später in der Service-Schicht verwendet werden können.
+ * Data Transfer Object (DTO) zur Übertragung von Filterparametern für Event-Abfragen.
+ * Diese Klasse wird verwendet, um HTTP-Query-Parameter in typsichere Java-Werte zu überführen,
+ * damit Events gezielt gefiltert werden können.
+ *
+ * Unterstützte Filter:
+ * - Wochentage
+ * - Monate
+ * - Zeiträume (von/bis)
+ * - Textsuche im Titel
+ * - Tags (Kategorien)
+ * - Datum von/bis
+ *
+ * <p>Wird hauptsächlich vom {@code EventController} verwendet.</p>
+ *
+ * @author Chris
  */
 public class FilterDto {
 
-    // Der rohe String vom Query-Param ("MONDAY,TUESDAY")
+    // Rohdaten-String für Wochentage ("MONDAY,TUESDAY")
     private String weekday;
 
-    // Liste von Monaten als Integer ([1, 2, 3])
+    // Liste von Monaten (1 = Januar, 12 = Dezember)
     private List<Integer> month;
 
-    // Zeitintervall: von wann bis wann ("2025-07-10T08:00:00Z")
+    // Start- und Endzeitpunkt (ISO 8601)
     private Instant from;
     private Instant to;
 
-    // Event-Tag ("Arbeit", "Privat", "Feiertag")
+    // Kategorie-Tag ("Privat", "Arbeit")
     private String tag;
 
-    // Teilstring, der im Titel enthalten sein soll
+    // Teilwort-Suche im Titel
     private String titleContains;
 
-    // Optionaler Datumsbereich (Start und Ende)
+    // Optionaler Datumsbereich (yyyy-MM-dd)
     private LocalDate dateFrom;
     private LocalDate dateTo;
 
     /**
-     * Setzt den Wochentag-Filter als CSV-String.
-     * Wird später vermutlich im Service weiter verarbeitet.
+     * Setzt die Wochentage als CSV-String ("MONDAY,TUESDAY").
      *
-     * @param weekdaysCsv Kommagetrennte Liste von Tagen( "MONDAY,TUESDAY")
+     * @param weekdaysCsv Kommagetrennte Liste von Wochentagen
      */
     public void setWeekday(String weekdaysCsv) {
-        this.weekday = weekdaysCsv; // keine Validierung hier
+        this.weekday = weekdaysCsv;
     }
 
     /**
-     * Setzt die Monate aus einem CSV-String
-     * Wandelt sie in eine Liste von Integern um.
+     * Setzt die Monate als CSV-String ("1,3,12") und konvertiert sie in Integer.
      *
-     * @param monthsCsv Kommagetrennte Monatszahlen
+     * @param monthsCsv Kommagetrennte Liste von Monatszahlen (1–12)
      */
     public void setMonth(String monthsCsv) {
         this.month = (monthsCsv == null || monthsCsv.isBlank())
-                ? Collections.emptyList() // Wenn leer, dann leere Liste
-                : List.of(monthsCsv.split(",")) // Aufteilen bei Kommas
+                ? Collections.emptyList()
+                : List.of(monthsCsv.split(","))
                 .stream()
-                .map(Integer::parseInt) // Umwandeln in Integer
+                .map(Integer::parseInt)
                 .collect(Collectors.toList());
     }
 
     /**
-     * Setzt den Startzeitpunkt (Zeitstempel im ISO 8601-Format).
+     * Setzt den Startzeitpunkt für Zeitfilterung.
+     * Bei ungültigem oder leerem Wert wird {@code null} gesetzt.
      *
-     * @param fromIso z.B. "2025-07-10T08:00:00Z"
+     * @param fromIso Zeit im ISO 8601 Format ("2025-07-10T08:00:00Z")
      */
     public void setFrom(String fromIso) {
         try {
             this.from = (fromIso == null || fromIso.isBlank()) ? null : Instant.parse(fromIso);
         } catch (DateTimeParseException e) {
-            this.from = null; // Falls Parsing fehlschlägt → ignorieren
+            this.from = null;
         }
     }
 
     /**
-     * Setzt den Endzeitpunkt (Zeitstempel im ISO 8601-Format).
+     * Setzt den Endzeitpunkt für Zeitfilterung.
+     * Bei ungültigem oder leerem Wert wird {@code null} gesetzt.
      *
-     * @param toIso z. B. "2025-07-10T12:00:00Z"
+     * @param toIso Zeit im ISO 8601 Format ("2025-07-10T12:00:00Z")
      */
     public void setTo(String toIso) {
         try {
             this.to = (toIso == null || toIso.isBlank()) ? null : Instant.parse(toIso);
         } catch (DateTimeParseException e) {
-            this.to = null; // Fehlerhafte Eingabe wird ignoriert
+            this.to = null;
         }
     }
 
     /**
-     * Setzt den Tag (Kategorie-Tag des Events).
+     * Setzt den Tag bzw. das Tag-Kriterium (Kategorie).
      *
-     * @param tag Einfache Zeichenkette (z. B. "Arbeit")
+     * @param tag Freitext-Tag, "Privat" oder "Feiertag"
      */
     public void setTag(String tag) {
         this.tag = tag;
     }
 
     /**
-     * Setzt den Titel-Suchfilter.
-     * @param titleContains Teilstring, der im Eventtitel vorkommen soll
+     * Setzt den Filter für Titel-Teilsuche.
+     *
+     * @param titleContains Teilwort, das im Titel enthalten sein soll
      */
     public void setTitleContains(String titleContains) {
         this.titleContains = titleContains;
     }
 
     /**
-     * Setzt das Feld dateFrom basierend auf einem ISO-8601-Datum (z. B. "2025-08-01").
-     * Wandelt den String in ein LocalDate-Objekt um, das später zur Filterung verwendet werden kann.
-     * Falls der Eingabewert null ist, wird auch das Feld auf null gesetzt.
+     * Setzt das Startdatum ("2025-08-01") für die Datumsbereichsfilterung.
      *
-     * @param date das Datum im Format "yyyy-MM-dd" (z. B. "2025-08-01")
+     * @param date Datum im Format yyyy-MM-dd
      */
     public void setDateFrom(String date) {
-        this.dateFrom = date == null ? null : LocalDate.parse(date); // Konvertierung mit parse()
+        this.dateFrom = date == null ? null : LocalDate.parse(date);
     }
 
     /**
-     * Setzt das Feld dateTo basierend auf einem ISO-8601-Datum (z. B. "2025-08-31").
-     * Wandelt den String in ein LocalDate-Objekt um.
-     * Wenn kein Wert übergeben wird (null), wird auch das Attribut null.
+     * Setzt das Enddatum ("2025-08-31") für die Datumsbereichsfilterung.
      *
-     * @param date das Datum im Format "yyyy-MM-dd"
+     * @param date Datum im Format yyyy-MM-dd
      */
     public void setDateTo(String date) {
-        this.dateTo = date == null ? null : LocalDate.parse(date); // ISO-Format erwartet
+        this.dateTo = date == null ? null : LocalDate.parse(date);
     }
 
-    // ---------- Getter ----------
+    // -------------------- Getter --------------------
 
+    /**
+     * @return CSV-String der gesetzten Wochentage
+     */
     public String getWeekday() {
         return weekday;
     }
 
+    /**
+     * @return Liste von Monaten (1–12)
+     */
     public List<Integer> getMonth() {
         return month;
     }
 
+    /**
+     * @return Startzeitpunkt als Instant
+     */
     public Instant getFrom() {
         return from;
     }
 
+    /**
+     * @return Endzeitpunkt als Instant
+     */
     public Instant getTo() {
         return to;
     }
 
+    /**
+     * @return Kategorie-Tag
+     */
     public String getTag() {
         return tag;
     }
 
+    /**
+     * @return Teilwort für Titelfilter
+     */
     public String getTitleContains() {
         return titleContains;
     }
 
+    /**
+     * @return Startdatum für Filterbereich
+     */
     public LocalDate getDateFrom() {
         return dateFrom;
     }
 
+    /**
+     * @return Enddatum für Filterbereich
+     */
     public LocalDate getDateTo() {
         return dateTo;
     }
